Tue Mar 06 11:08:45 2001  George Lebl <jirka@5z.com>

	* basep-widget.c: don't show the panel if hidebuttons are disabled
	  for the drawers case.  I suppose this is not the best fix and it
	  should be in the respecitve panels. Fixes #21963

Sun Mar 04 22:43:22 2001  George Lebl <jirka@5z.com>

	* gnome-run.c: find and set envariomental variables for exec
	  shell style.  Fix a small leak, enable command completion on
	  Ctrl-Tab, if it were on tab it would make keyboard navigation
	  impossible.

Sun Mar 04 14:19:15 2001  George Lebl <jirka@5z.com>

	* global-keys.c: clean up the modifiers patch to actually compile
	  and be more in the panel style of coding.

2001-03-02  Valek Filippov  <frob@df.ru>

	* panel/global-keys.c: patch from Vlad Harchev <hvv@hippo.ru> for
	  popup menu and "run" dialog independancy from the state of Scroll/Numlock.

Thu Mar 01 03:29:01 2001  George Lebl <jirka@5z.com>

	* icon-entry-hack.[ch], menu.c, drawer.c, panel-util.c,
	  menu-properties.c, launcher.c:  Fix icon selection bugs.  One
	  icon doesn't change when just selected,  second notice the change
	  when the first time an icon is set from no icon.

Tue Feb 27 20:57:52 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, drawer-widget.c: remove some dead code.

Tue Feb 27 20:56:32 2001  George Lebl <jirka@5z.com>

	* gnome-run.c: a bit of cleanup and set the file selection box
	  as a transient of the runbox.

2001-02-25  jacob berkman  <jacob@ximian.com>

	* xstuff.c (try_checking_swallows): pass in a gwmhtask instead of
	winid.  this prevents some BadWindows i was getting and maybe
	saves a server round trip.

Sun Feb 25 00:12:08 2001  George Lebl <jirka@5z.com>

	* menu.c: correctly set the custom_icon_file member, to fix #51348

Sat Feb 24 23:49:15 2001  George Lebl <jirka@5z.com>

	* applet.c, foobar-widget.c, gnome-run.c, menu.c, swallow.c,
	  launcher.c: use g_get_home_dir () as the current directory for the
	  gnome_execute_* call, and push pop the home directory for