@@ -51,3 +51,4 @@ Exec=gnome-panel-properties-capplet
 Icon=gnome-panel.png
 Terminal=0
 Type=Application
+DocPath=panel/globalpanelprefs.html
