@@ -1,3 +1,11 @@
+Tue Mar 06 16:20:26 2001  George Lebl <jirka@5z.com>
+
+	* launcher.[ch], menu.c, applet.c, gnome-panel-properties.desktop,
+	  panel-utils.c:  Understand the DocPath field.  Now we can start
+	  using it in other .desktops.  Still doesn't understand the kde
+	  paths, though that should not be hard if we can guess the KDE
+	  documentation path.
+
 Tue Mar 06 11:08:45 2001  George Lebl <jirka@5z.com>
 
 	* basep-widget.c: don't show the panel if hidebuttons are disabled
